# reference

./: .gitignore  .script.sh.swp  Colors.txt  Composer.txt  README.md  RegExp.txt  git.txt  script.sh  syntax.c  syntax.css  ubuntu.txt
C/: header.h  syntax.c
back-end/: MySQL.sql  SQL.sql  console.txt  git.txt  nginx.conf
back-end/php/: composer.php  func.php  oop.php  syntax.php  vars.php
bash/: .swp  script.sh  syntax.sh
cmd/: app.cmd  syntax.cmd
cmd/example/: app.cmd  autoload.cmd  debug.cmd
cmd/game/: app.cmd  menu.cmd
cmd/safc/: .gitignore  AppRender.cmd  empty.cmd
cmd/safc_project/: .gitignore  AppArr.cmd  AppEmpty.cmd  LibTest.cmd
console/bash/: syntax.sh
console/c/: my_lib.h  syntax.c
console/cmd/: syntax.cmd
console/haskell/: Nat.hs  ST.hs  Syntax.hs  Test.hs  functions.hs
console/powershell/: module.psm1  oop.ps1  syntax.ps1
crypto/: 0_rsa.txt  2_hellman.txt  3_blockchain.txt
crypto/help_code/: pow_mod.php
css/: CSS.css  LESS.less
esolangs/comb/: comb.txt  Камбинаторная логика.txt
fakeapi/: login_error.json  login_ok.json  register_error.json  register_ok.json
fan/bf/: 101_if.bf  brainfuck.bf  example_if.bf  example_if_raw.bf
fan/brainfuck/: example_if.bf  info.bf
fan/minecraft/: datapack_struct.txt  syntax.mcfunction
fan/slashes/: IDE.url  newest.txt  start.cmd
front-end/: SCSS.scss  html.html
haskell/base/: (cmd)ghc.md  (cmd)ghc.txt  (pkg)cabal.md  (pkg)cabal.txt  (pkg)stack.txt  Book.hs  Chiper.hs  Condidate.hs  Cup.hs  Generators.hs  HighKind.hs  HomaCode.hs  MyArrow.hs  MyFunctor.hs  MyLens.hs  MyMap.hs  MyReader.hs  MyState.hs  MyWriter.hs  Pizza.hs  Syntax.hs  Tree.hs
haskell/examples/: Cup.hs  Generators.hs  MyLambda.hs  Patents.hs  Tree.hs  URLGen.hs
haskell/extra/: Arrow.hs  (+5 more)
haskell/libs/tmp_aeson/: CHANGELOG.md  LICENSE  tmp-aeson.cabal
haskell/libs/tmp_aeson/app/: Main.hs
haskell/libs/tmp_array/: CHANGELOG.md  tmp-array.cabal
haskell/libs/tmp_array/app/: Main.hs
haskell/libs/tmp_parallel/: CHANGELOG.md  tmp-parallel.cabal  tmp-parallel.eventlog
haskell/libs/tmp_parallel/app/: Main.hs
haskell/libs/tmp_parallel/src/: CoreCalc.hs  EvalTest.hs  ParTest.hs
haskell/libs/tmp_sqlite/: CHANGELOG.md  tmp-sqlite.cabal
haskell/libs/tmp_sqlite/app/: Main.hs
hcode/: CodeMaps.md  DisperceT1.md  DisperceTable.md  Main.md
help/: (cfg)docker-compose.txt  (cmd)nix.txt  (pkg)composer.txt  (pkg)npm.txt  .vimrc  Colors.txt  Git.txt  MySQL.sql  RegExp.txt  doker.txt  makefile.txt  nix.txt  regexp.md  server-apache.txt  server-nginx.txt  test.json  Камбинаторная логика.md  Камбинаторная логика.txt
homa_code/: DisperceT1.md  Main.md
html/: CSS.css  LESS.less  SCSS.scss  canvas.html  ejs.ejs  html.html  pug.pug  svg.html
js/: DOM.js  dom.js  jQuery.js  npm.js  syntax.js
minecraft/: commands.mcfunction  commands.txt
nix/: flake.nix  haskell_flake.nix  haskell_flake_for_all.nix  haskell_flake_for_build.nix  haskell_flake_for_run.nix
nix_flakes/: haskell_flake_for_shell.nix
node.js/: node.js  npm.js  server.js
php/: .oop.php.swp  classes.php  composer.php  functions.php  oop.php  syntax.php  vars.php
python/: app.py  django.txt  function.py  pip.py  window.py
sql/: (cmd)sqlite3.md  (cmd)sqlite3.txt  syntax.sql
web/: syntax_mysql.sql
(+239 files in other folders)
