cabal-version:      3.0
name:               tmp-aeson
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             homaander
maintainer:         hom.ander23@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable tmp-aeson
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    default-extensions: 
        OverloadedStrings
      , DeriveGeneric
    build-depends:
        base ^>=4.20.0.0
      , aeson
      , text
      , bytestring
    hs-source-dirs:   app
    default-language: Haskell2010
