cabal-version:      3.0
name:               tmp-parallel
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             homaander
maintainer:         hom.ander23@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -threaded

library
    import:           warnings
    exposed-modules:
      CoreCalc
      EvalTest
      ParTest
    build-depends:
        base ^>=4.20.0.0
      , parallel
      , monad-par

      , deepseq

      , time

    hs-source-dirs:   src
    default-language: Haskell2010

executable tmp-parallel
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.0.0
      , tmp-parallel

      , parallel
      , monad-par

      , deepseq

      , time

    hs-source-dirs:   app
    default-language: Haskell2010
